# time-series-generator

./: .gitignore  Component.py  LICENSE  README.md  TimeSeriesGenerator.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
config/: config.yaml
src/main/: generator_linspace.py  generator_typing.py  point_clustering.py  point_sampling.py  process.py  process_list.py  schedule.py  scheduler.py  scheduler_storage.py  time_series.py  time_series_generator.py
src/test/: test_process_list.py  test_scheduler.py  test_time_series.py  test_time_series_generator.py
src/time_series_generator/: component.py  time_series_generator.py
test/: test_process_list.py  test_process_storage.py  test_scheduler.py  test_time_series.py  test_time_series_generator.py
test/test_process/: test_specific_processes.py
tsg/: linspace_info.py  main.py  time_series.py  time_series_generator.py
tsg/parameters_generation/: __init__.py  aggregation_method.py  all_generation_methods.py  parameter_types.py  parameters_generation_method.py  parametrization_method.py  random_method.py
tsg/process/: double_exponential_smoothing.py  process.py  process_list.py  process_storage.py  random_walk.py  simple_exponential_smoothing.py  simple_random_walk.py  triple_exponential_smoothing.py  white_noise.py
tsg/sampling/: aggregated_data.py  point_clustering.py  point_sampling.py
tsg/scheduler/: scheduler.py  scheduler_storage.py
tsg/source_data_sampling/: graph_sampling_method.py  point_clustering.py  source_data.py  source_data_sampling_method.py  (+1 more)
tsg/utils/: utils.py  (+2 more)
(+35 files in other folders)
